feat: add email verification by code, telegram auth and validation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,26 +1,29 @@
 spring.application.name=aemix
 
 spring.datasource.url=${DATASOURCE_URL}
-spring.datasource.username=app
+spring.datasource.username=${DATASOURCE_USERNAME}
 spring.datasource.password=${DATASOURCE_PASSWORD}
-spring.jpa.hibernate.ddl-auto=create-drop
+
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database=postgresql
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=${MAIL_USERNAME}
-spring.mail.password=${MAIL_PASSWORD}
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-
-app.verify.base-url=http://localhost:8080
-app.verify.token-ttl-minutes=30
-
-
-security.jwt.secret-key=8f1e2d3c4b5a6978a9b8c7d6e5f4a3b2
+security.jwt.secret-key=${JWT_SECRET_KEY}
 security.jwt.expiration-time=86400000
 security.jwt.algorithm=HS256
 
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=${SUPPORT_EMAIL}
+spring.mail.password=${APP_PASSWORD}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
 api.version=/api
+
+spring.config.import=optional:file:.env[.properties]
+
+telegram.bot.token=${TELEGRAM_BOT_TOKEN}
+telegram.auth.max-age-seconds=86400
