added instruction link

--- a/.env
+++ b/.env
@@ -9,4 +9,4 @@ APP_PASSWORD=zrdf xhxv tmlg qlpk
 
 TELEGRAM_BOT_TOKEN=8257692647:AAHjDZfOVoyQiqjzb3PzKF5Ub1IRlqMMkXM
 
-RESET_PASSWORD_URL=http://aemix-ship-front.vercel.app/reset-password
+RESET_PASSWORD_URL=http://localhost:5173/reset-password
